binread/tests/errors/unsupported_type_enum.rs
use binread::BinRead;

#[derive(BinRead)]
enum Foo {}

fn main() {}
